2000-12-06  Braden McDaniel  <braden@endoframe.com>

        * Applied patch to fix
          
          <http://sourceforge.net/bugs/?func=detailbug&bug_id=124439&group_id=7151>
          
          This adds identification of hexadecimal integers to the lexer,
          and removes use of istrstream from the parser.

2000-12-05  Braden McDaniel  <braden@endoframe.com>

        * Reverted 26 Nov change to VrmlField.h. CodeWarrior 5/Mac is
          using ISO IOstreams, and had problems with the forward
          declaration.

2000-11-28  Braden McDaniel  <braden@endoframe.com>

        * Applied patch to lookat from Jeff Dubrule <igor@pobox.com> to prefer
          viewpoint descriptions to DEF names in the viewpoint menu.

2000-11-27  Braden McDaniel  <braden@endoframe.com>

        * Got rid of confusing VrmlSField and VrmlMField #defines in
          VrmlField.h.

2000-11-26  Braden McDaniel  <braden@endoframe.com>

        * Replaced include of <iostream.h> in VrmlField.h with a forward
          declaration of ostream.

2000-11-23  Braden McDaniel  <braden@endoframe.com>

        * Corrected (and changed implementation of) VrmlField::fieldTypeName();
          changed implemetation of VrmlField::fieldType(const char *). Thanks to
          Jeff Dubrule <igor@pobox.com> for noting the problem with
          VrmlField::fieldTypeName().

2000-11-18  Braden McDaniel  <braden@endoframe.com>

        * Backported the patch to Mozilla bug 24892.  We should nolonger need
          special CFLAGS to compile JavaScript under Red Hat 7.0. This fixes
          <http://sourceforge.net/bugs/?func=detailbug&bug_id=122654&group_id=7151>

2000-11-17  Braden McDaniel  <braden@endoframe.com>

        * Made the parser, scanner, and ANTLR headers non-public.

        * Upgraded JavaScript to 1.5RC2.

        * Added another tryURLs method to Image:
          
            bool tryURLs(const VrmlMFString & urls, Doc2 * relative = 0);
          