@@ -24,24 +24,23 @@ KEYWORD_ROUTE="ROUTE"=24
 KEYWORD_TO="TO"=25
 KEYWORD_TRUE="TRUE"=26
 KEYWORD_USE="USE"=27
-NODE_SCRIPT=28
-FIELDTYPE_SFBOOL=29
-FIELDTYPE_SFCOLOR=30
-FIELDTYPE_SFFLOAT=31
-FIELDTYPE_SFIMAGE=32
-FIELDTYPE_SFINT32=33
-FIELDTYPE_SFNODE=34
-FIELDTYPE_SFROTATION=35
-FIELDTYPE_SFSTRING=36
-FIELDTYPE_SFTIME=37
-FIELDTYPE_SFVEC2F=38
-FIELDTYPE_SFVEC3F=39
-FIELDTYPE_MFCOLOR=40
-FIELDTYPE_MFFLOAT=41
-FIELDTYPE_MFINT32=42
-FIELDTYPE_MFNODE=43
-FIELDTYPE_MFROTATION=44
-FIELDTYPE_MFSTRING=45
-FIELDTYPE_MFTIME=46
-FIELDTYPE_MFVEC2F=47
-FIELDTYPE_MFVEC3F=48
+FIELDTYPE_SFBOOL=28
+FIELDTYPE_SFCOLOR=29
+FIELDTYPE_SFFLOAT=30
+FIELDTYPE_SFIMAGE=31
+FIELDTYPE_SFINT32=32
+FIELDTYPE_SFNODE=33
+FIELDTYPE_SFROTATION=34
+FIELDTYPE_SFSTRING=35
+FIELDTYPE_SFTIME=36
+FIELDTYPE_SFVEC2F=37
+FIELDTYPE_SFVEC3F=38
+FIELDTYPE_MFCOLOR=39
+FIELDTYPE_MFFLOAT=40
+FIELDTYPE_MFINT32=41
+FIELDTYPE_MFNODE=42
+FIELDTYPE_MFROTATION=43
+FIELDTYPE_MFSTRING=44
+FIELDTYPE_MFTIME=45
+FIELDTYPE_MFVEC2F=46
+FIELDTYPE_MFVEC3F=47
