@@ -61,27 +61,26 @@ const int Vrml97Utf8Scanner::KEYWORD_ROUTE          (24);
 const int Vrml97Utf8Scanner::KEYWORD_TO             (25);
 const int Vrml97Utf8Scanner::KEYWORD_TRUE           (26);
 const int Vrml97Utf8Scanner::KEYWORD_USE            (27);
-const int Vrml97Utf8Scanner::NODE_SCRIPT            (28);
-const int Vrml97Utf8Scanner::FIELDTYPE_SFBOOL       (29);
-const int Vrml97Utf8Scanner::FIELDTYPE_SFCOLOR      (30);
-const int Vrml97Utf8Scanner::FIELDTYPE_SFFLOAT      (31);
-const int Vrml97Utf8Scanner::FIELDTYPE_SFIMAGE      (32);
-const int Vrml97Utf8Scanner::FIELDTYPE_SFINT32      (33);
-const int Vrml97Utf8Scanner::FIELDTYPE_SFNODE       (34);
-const int Vrml97Utf8Scanner::FIELDTYPE_SFROTATION   (35);
-const int Vrml97Utf8Scanner::FIELDTYPE_SFSTRING     (36);
-const int Vrml97Utf8Scanner::FIELDTYPE_SFTIME       (37);
-const int Vrml97Utf8Scanner::FIELDTYPE_SFVEC2F      (38);
-const int Vrml97Utf8Scanner::FIELDTYPE_SFVEC3F      (39);
-const int Vrml97Utf8Scanner::FIELDTYPE_MFCOLOR      (40);
-const int Vrml97Utf8Scanner::FIELDTYPE_MFFLOAT      (41);
-const int Vrml97Utf8Scanner::FIELDTYPE_MFINT32      (42);
-const int Vrml97Utf8Scanner::FIELDTYPE_MFNODE       (43);
-const int Vrml97Utf8Scanner::FIELDTYPE_MFROTATION   (44);
-const int Vrml97Utf8Scanner::FIELDTYPE_MFSTRING     (45);
-const int Vrml97Utf8Scanner::FIELDTYPE_MFTIME       (46);
-const int Vrml97Utf8Scanner::FIELDTYPE_MFVEC2F      (47);
-const int Vrml97Utf8Scanner::FIELDTYPE_MFVEC3F      (48);
+const int Vrml97Utf8Scanner::FIELDTYPE_SFBOOL       (28);
+const int Vrml97Utf8Scanner::FIELDTYPE_SFCOLOR      (39);
+const int Vrml97Utf8Scanner::FIELDTYPE_SFFLOAT      (30);
+const int Vrml97Utf8Scanner::FIELDTYPE_SFIMAGE      (31);
+const int Vrml97Utf8Scanner::FIELDTYPE_SFINT32      (32);
+const int Vrml97Utf8Scanner::FIELDTYPE_SFNODE       (33);
+const int Vrml97Utf8Scanner::FIELDTYPE_SFROTATION   (34);
+const int Vrml97Utf8Scanner::FIELDTYPE_SFSTRING     (35);
+const int Vrml97Utf8Scanner::FIELDTYPE_SFTIME       (36);
+const int Vrml97Utf8Scanner::FIELDTYPE_SFVEC2F      (37);
+const int Vrml97Utf8Scanner::FIELDTYPE_SFVEC3F      (38);
+const int Vrml97Utf8Scanner::FIELDTYPE_MFCOLOR      (39);
+const int Vrml97Utf8Scanner::FIELDTYPE_MFFLOAT      (40);
+const int Vrml97Utf8Scanner::FIELDTYPE_MFINT32      (41);
+const int Vrml97Utf8Scanner::FIELDTYPE_MFNODE       (42);
+const int Vrml97Utf8Scanner::FIELDTYPE_MFROTATION   (43);
+const int Vrml97Utf8Scanner::FIELDTYPE_MFSTRING     (44);
+const int Vrml97Utf8Scanner::FIELDTYPE_MFTIME       (45);
+const int Vrml97Utf8Scanner::FIELDTYPE_MFVEC2F      (46);
+const int Vrml97Utf8Scanner::FIELDTYPE_MFVEC3F      (47);
 
 Vrml97Utf8Scanner::Vrml97Utf8Scanner(::istream & istm)
   : _istm(istm), _line(1), _col(0), _c(' '), _prevChar('\0'), _prevTokenType(0),
